--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,7 +17,7 @@
             </MenuItem>
             <MenuItem Header="Edytuj">
                 <MenuItem Header="Nowy" Click="New_Click"/>
-                <MenuItem Header="Usuń zaznaczone"/>
+                <MenuItem Header="Usuń zaznaczone" Click="Delete_Click"/>
             </MenuItem>
         </Menu>
         <ListView x:Name="mainList" Margin="0,20,0,20" SelectionMode="Extended">
