--- a/Window1.xaml
+++ b/Window1.xaml
@@ -22,18 +22,21 @@
         <Label Content="Drugie Imie" HorizontalAlignment="Left" Height="29" Margin="13,106,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
         <TextBox Name="txtSurname" HorizontalAlignment="Left" Height="20" Margin="155,143,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
         <Label Content="Nazwisko*" HorizontalAlignment="Left" Height="29" Margin="13,140,0,0" VerticalAlignment="Top" Width="137" RenderTransformOrigin="0.5,-0.723" Grid.Row="2"/>
-        <TextBox Name="txtDateOfBirth" HorizontalAlignment="Left" Height="20" Margin="155,178,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
-        <Label Content="Data urodzenia*" HorizontalAlignment="Left" Height="29" Margin="13,173,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
-        <TextBox Name="txtNumber" HorizontalAlignment="Left" Height="20" Margin="155,212,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
-        <Label Content="Numer telefonu" HorizontalAlignment="Left" Height="29" Margin="13,207,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
-        <TextBox Name="txtLocation"  HorizontalAlignment="Left" Height="20" Margin="155,246,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
-        <Label Content="Adres zamieszkania*" HorizontalAlignment="Left" Height="29" Margin="13,241,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
-        <Button Content="Dodaj" HorizontalAlignment="Left" Height="25" Margin="13,356,0,0" VerticalAlignment="Top" Width="120" Grid.Row="2" Click="Add_Click"/>
-        <Button Content="Anuluj" HorizontalAlignment="Left" Height="25" Margin="155,356,0,0" VerticalAlignment="Top" Width="120" Grid.Row="2" Click="Cancel_Click"/>
+
+        <DatePicker  HorizontalAlignment="Left" Height="27" Margin="155,175,0,0" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2" Name="txtDateOfBirth" />
+        <Label Content="Data urodzenia*" HorizontalAlignment="Left" Height="29" Margin="13,174,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
+
+
+        <TextBox Name="txtNumber" HorizontalAlignment="Left" Height="20" Margin="155,214,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
+        <Label Content="Numer telefonu" HorizontalAlignment="Left" Height="29" Margin="13,209,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
+        <TextBox Name="txtLocation"  HorizontalAlignment="Left" Height="20" Margin="155,248,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
+        <Label Content="Adres zamieszkania*" HorizontalAlignment="Left" Height="29" Margin="13,243,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
+        <Button Content="Dodaj" HorizontalAlignment="Left" Height="25" Margin="13,358,0,0" VerticalAlignment="Top" Width="120" Grid.Row="2" Click="Add_Click"/>
+        <Button Content="Anuluj" HorizontalAlignment="Left" Height="25" Margin="155,358,0,0" VerticalAlignment="Top" Width="120" Grid.Row="2" Click="Cancel_Click"/>
         <Label Content="Dodaj Ucznia:" HorizontalAlignment="Left" Height="41" Margin="13,10,0,0" VerticalAlignment="Top" Width="262" Grid.RowSpan="3"/>
-        <TextBox x:Name="txtCity"  HorizontalAlignment="Left" Height="20" Margin="155,280,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
-        <Label Content="Miejscowosc*" HorizontalAlignment="Left" Height="29" Margin="13,275,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
-        <TextBox x:Name="txtCode"  HorizontalAlignment="Left" Height="20" Margin="155,314,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
-        <Label Content="Kod pocztowy*" HorizontalAlignment="Left" Height="29" Margin="13,309,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
+        <TextBox x:Name="txtCity"  HorizontalAlignment="Left" Height="20" Margin="155,282,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
+        <Label Content="Miejscowosc*" HorizontalAlignment="Left" Height="29" Margin="13,277,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
+        <TextBox x:Name="txtCode"  HorizontalAlignment="Left" Height="20" Margin="155,316,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Grid.Row="2"/>
+        <Label Content="Kod pocztowy*" HorizontalAlignment="Left" Height="29" Margin="13,311,0,0" VerticalAlignment="Top" Width="137" Grid.Row="2"/>
     </Grid>
 </Window>
